--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,6 @@ jobs:
       - run: npm i -g @vscode/vsce
       - run: vsce package
       - name: Upload a Build artifact
-        uses: actions/upload-artifact@4.4.0
+        uses: actions/upload-artifact@v4
         with:
           path: hello-extension*.vsix
