--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions test
+name: Release VSCode Extension test
 run-name: test1
 on: [push]
 jobs:
@@ -18,5 +18,3 @@ jobs:
         with:
           files: |
             hello-extension*.vsix
-            LICENSE.txt
-            README.md
